Improve header on mobiles, add USB page in header Fix filter wrap

--- a/src/modules/catalog/features/ui/FiltersDesktop/FiltersDesktop.module.scss
+++ b/src/modules/catalog/features/ui/FiltersDesktop/FiltersDesktop.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 20px;
   position: sticky;
-  top: 20px;
+  top: 100px;
   height: fit-content;
   padding: 15px;
   outline: 1px dashed var(--gray-border);
